--- a/week2/index.html
+++ b/week2/index.html
@@ -45,11 +45,25 @@
 	    	<section data-role="content">
 	    	    <ul data-role="listview" data-ajax="false"  data-theme="a" data-filter-placeholder="Search" class="ui-icon-alt" data-inset="true">
 	    	        <li data-role="list-divider" data-theme="a">Browse by Lead Info</li>
-	    	        <li><a href="#show" id="jsontest">JSON</a></li>
+	    	        <li><a href="#show" id="json">JSON</a></li>
 	    	        <li><a href="#show" id="xml">XML</a></li>
 	    	        <li><a href="#show" id="local">Local</a></li>
 	    	    </ul>
 	    	</section>
+
+	    	
+
+<div data-role="popup" id="popupDialog" data-overlay-theme="a" data-theme="c" data-dismissible="false" style="max-width:400px;" class="ui-corner-all">
+    <div data-role="header" data-theme="a" class="ui-corner-top">
+        <h1>Delete Page?</h1>
+    </div>
+    <div data-role="content" data-theme="d" class="ui-corner-bottom ui-content">
+        <h3 class="ui-title">Are you sure you want to delete this page?</h3>
+        <p>This action cannot be undone.</p>
+        <a href="#" data-role="button" data-inline="true" data-rel="back" data-theme="c">Cancel</a>
+        <a href="#" data-role="button" data-inline="true" data-rel="back" data-transition="flow" data-theme="b">Delete</a>
+    </div>
+</div>
 	  
 	    	<!-- Footer -->
 	    	<footer data-role="footer" data-id="footer" data-position="fixed" data-theme="a">
@@ -92,7 +106,7 @@
 	    	            	    	            
 	    	            <div>
 	    	                <input type="submit" name="newLead" value="Submit New Lead!" id="submit" data-theme="b" data-ajax="false" />
-	    	                <input type="reset" name="" value="Reset" data-theme="a" /> 	
+	    	                <input type="reset" id="reset" name="" value="Reset" data-theme="a" /> 	
 	    	            </div>
 	    	        </form>
 	    	    </section><!-- content -->
@@ -115,7 +129,7 @@
 	    	        <h1>Show Leads</h1>
 	    	    </header>
 
-						<h3>Cities worldwide</h3>
+						<h3>Seach All Leads</h3>
 						<p>After you enter <strong>at least three characters</strong> the autocomplete function will show all possible matches.</p>
 						<ul id="autocomplete" data-role="listview" data-inset="true" data-filter="true" data-filter-placeholder="Find a city..." data-filter-theme="d"></ul>
 
