--- a/week2/index.html
+++ b/week2/index.html
@@ -131,7 +131,7 @@
 
 						<h3>Seach All Leads</h3>
 						<p>After you enter <strong>at least three characters</strong> the autocomplete function will show all possible matches.</p>
-						<ul id="autocomplete" data-role="listview" data-inset="true" data-filter="true" data-filter-placeholder="Find a city..." data-filter-theme="d"></ul>
+						<ul id="autocomplete" data-role="listview" data-inset="true" data-filter="true" data-filter-placeholder="Find a lead..." data-filter-theme="d"></ul>
 
 	    	    <section class="leads" data-role="content">
 	    	        <ul id="leads" data-role="listview" data-inset="true" data-divider-theme="a">
