--- a/week2/index.html
+++ b/week2/index.html
@@ -105,7 +105,6 @@
 	    	    		<ul>
 	    	    			<li><a href="#home">Home</a></li>
 	    	    			<li><a href="#additem" data-ajax="false" class="ui-btn-active ui-state-persist">Add Lead</a></li>
-	    	    			<li><a href="#show">Show Leads</a></li>
 	    	    			<li><a href="#leads" id="displayLink">Show</a></li>
 	    	    		</ul>
 	    	    	</nav><!-- /navbar -->
@@ -141,29 +140,20 @@
 	    	    		<ul>
 	    	    			<li><a href="#home">Home</a></li>
 	    	    			<li><a href="#additem" data-ajax="false">Add Lead</a></li>
-	    	    			<li><a href="#show" class="ui-btn-active ui-state-persist">Show Leads</a></li>
 	    	    			<li><a href="" id="clear">Delete</a></li>
 	    	    		</ul>
 	    	    	</nav><!-- /navbar -->
 	    	    </footer><!-- /footer -->
 	    	</section><!-- end of page -->
 
-	  <div id="showLead" 
-	  		data-role="page">
-	  		<div data-role="header"
-	  					data-position="fixed"
-	  					data-theme='a'>
-	  				<a href="#show"
-	  					data-icon="back"
-	  					data-iconpos="notext"
-	  					data-direction="reverse">Dynamic</a>
+	  <div id="showLead" data-role="page">
+	  		<div data-role="header" data-position="fixed" data-theme='a'>
+	  				<a href="#show" data-icon="back" data-iconpos="notext" data-direction="reverse">Dynamic</a>
 	  				<h1>Header</h1>
 	  		</div>
-	  	<div data-role="content">
-	  		<div id="myleads">
-	  			
-	  		</div>
-	  		
+	  		<div data-role="content">
+	  				<div id="myleads">
+	  				</div>
 	  	</div>
 	  </div>
 
@@ -173,6 +163,13 @@
 	    <!-- JavaScript under here -->
 		<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
 		<script src="js/jquery.mobile-1.3.2.min.js" type="text/javascript"></script>
+		
+		<!-- DateBox Script -->
+		<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.core.min.js"></script>
+		<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.mode.calbox.min.js"></script>
+		<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/i18n/jquery.mobile.datebox.i18n.en_US.utf8.js"></script>
+
+		<!-- App js -->
 		<script src="js/main.js"></script>
 		<script src="js/getdata.js"></script>
 
