--- a/week2/index.html
+++ b/week2/index.html
@@ -46,7 +46,7 @@
 	    	
 	    	<!-- Browse and Search -->
 	    	<section class="leads" data-role="content">
-	    	        <ul id="jsonleads" data-role="listview"  data-divider-theme="b" data-filter="true" data-filter-theme="a">
+	    	        <ul id="jsonleads" data-role="listview"  data-divider-theme="b">
 	    	            
 	    	        </ul>
 	    	        <ul id="xmlleads" data-role="listview"  data-divider-theme="a">
