--- a/week2/index.html
+++ b/week2/index.html
@@ -18,14 +18,14 @@
 		<meta http-equiv="cleartype" content="on" />
 		
 		<!-- StyleSheets under here -->
-		<link rel="stylesheet" href="css/jquery.mobile-1.3.2.min.css" type="" />
-		<link rel="stylesheet" type="text/css" href="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.min.css" />
+		<link rel="stylesheet" href="css/lib/jquery.mobile-1.3.2.min.css" type="" />
+		<link rel="stylesheet" href="css/lib/jqm-datebox.min.css" />
 		<link rel="stylesheet" href="css/themes/my-custom-theme.css" />
 		<link rel="stylesheet" href="css/main.css" />
 
 		
 		<!-- Modernizr enables HTML5 elements & feature detects -->
-		<script src="js/modernizr.custom.min.js"></script>
+		<script src="js/lib/modernizr.custom.min.js"></script>
 		
 	</head>
 
@@ -181,17 +181,16 @@
 	   
 	
 	    <!-- JavaScript under here -->
-		<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
-		<script src="js/jquery.mobile-1.3.2.min.js" type="text/javascript"></script>
+		<script src="js/lib/jquery-1.10.2.min.js"></script>
+		<script src="js/lib/jquery.mobile-1.3.2.min.js"></script>
 		
 		<!-- Validation Script -->
-		<script src="http://jquery.bassistance.de/validate/jquery.validate.js"></script>
-		<script src="http://jquery.bassistance.de/validate/additional-methods.js"></script>
+		<script src="js/lib/jquery.validate.js"></script>
+		<script src="js/lib/additional-methods.min.js"></script>
 
 		<!-- DateBox Script -->
-		<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.core.min.js"></script>
-		<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.mode.calbox.min.js"></script>
-		<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/i18n/jquery.mobile.datebox.i18n.en_US.utf8.js"></script>
+		<script src="js/lib/jqm-datebox.core.min.js"></script>
+		<script src="js/lib/jqm-datebox.mode.calbox.min.js"></script>
 
 		<script src="js/main.js"></script>
 		<script src="js/getdata.js"></script>
