--- a/week2/index.html
+++ b/week2/index.html
@@ -66,6 +66,8 @@
     				<a href="#" data-role="button" data-inline="true" id="xmlbtn">Load XML</a>
     				<a href="#" data-role="button" data-inline="true" id="localbtn">Load Local</a>
 					</p>
+					<div>
+					</div>
 				</div> -->
 	  
 	    	<!-- Footer -->
