--- a/week3/leadmanager/app/_attachments/index.html
+++ b/week3/leadmanager/app/_attachments/index.html
@@ -54,11 +54,13 @@
 	    	  </ul>
 	    	</section>
 
+			
 	    	<div>
-	    	  <input type="button" name="jsonbtn" value="Load JSON" id="jsonbtn" data-theme="b" data-ajax="false" />
-	    	  <input type="button" name="xmlbtn" value="Load XML" id="xmlbtn" data-theme="a" data-ajax="false" />
+	    	 <!-- <input type="button" name="jsonbtn" value="Load JSON" id="jsonbtn" data-theme="b" data-ajax="false" />
+	    	  <input type="button" name="xmlbtn" value="Load XML" id="xmlbtn" data-theme="a" data-ajax="false" /> -->
 	    	  <input type="button" name="localbtn" value="Load Local" id="localbtn" data-theme="c" data-ajax="false" />
 	    	</div>
+	    	
 				
 				<!-- <div align="center">
 					<p>
@@ -190,11 +192,11 @@
 
 		<!-- DateBox Script -->
 		<script src="jqm-datebox.core.min.js"></script>
-		<script src="js/lib/jqm-datebox.mode.calbox.min.js"></script>
+		<script src="jqm-datebox.mode.calbox.min.js"></script>
 
 		<script src="main.js"></script>
+		<script src="mainjs.js"></script>
 		<script src="getdata.js"></script>
-
 		
 	
 	</body>
