updated edit for local storage

--- a/week2/index.html
+++ b/week2/index.html
@@ -108,7 +108,7 @@
 	    	            </div>
 	    	            	    	            
 	    	            <div>
-	    	                <input type="submit" name="newLead" value="Submit New Lead!" id="submit" data-theme="b" data-ajax="false" />
+	    	                <a href="#" data-role="button" id="submitLead" data-theme="b">Submit Lead</a> 
 	    	                <input type="reset" name="" value="Reset" data-theme="a" />
 	    	                <a href="#" data-role="button" id="deleteall" data-theme="c">Delete All</a> 	
 	    	            </div>
